--- a/index.css
+++ b/index.css
@@ -1,7 +1,19 @@
-a {
+/* unvisited link */
+a:link {
   color: red;
-  
-  :hover {
-    color: blue;
-  }
+}
+
+/* visited link */
+a:visited {
+  color: green;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
 }
